--- a/NetworkMonitor/src/main/res/values/styles.xml
+++ b/NetworkMonitor/src/main/res/values/styles.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <style name="AppMTheme" parent="Theme.MaterialComponents.Light.NoActionBar"/>
+
     <style name="WarningText14">
         <item name="android:textSize">14sp</item>
         <item name="android:paddingStart">20dp</item>
@@ -15,4 +18,5 @@
         <item name="android:letterSpacing">0</item>
         <item name="strokeWidth">0dp</item>
     </style>
+
 </resources>
