--- a/NetworkMonitor/src/main/res/layout/dialog_warning.xml
+++ b/NetworkMonitor/src/main/res/layout/dialog_warning.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:backgroundTint="@android:color/white">
 
         <TextView
             android:id="@+id/warningTitle"
