--- a/NetworkMonitor/src/main/res/values/colors.xml
+++ b/NetworkMonitor/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorGreen750">#0F6C64</color>
     <color name="colorGray800">#424242</color>
     <color name="colorGray200">#EEE</color>
+    <color name="colorDisabledButton">#BDBDBD</color>
+    <color name="titleTabColor">#afafaf</color>
 
     <color name="colorOrange">#F57C00</color>
 </resources>
