--- a/NetworkMonitor/src/main/res/values/styles.xml
+++ b/NetworkMonitor/src/main/res/values/styles.xml
@@ -17,9 +17,9 @@
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
         <item name="android:letterSpacing">0</item>
-
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="android:background">@drawable/button_pressed</item>
+<!--        <item name="android:background">@drawable/button_pressed</item>-->
     </style>
 
 </resources>
